--- a/MyAspNetApp/Views/Account/Register.cshtml
+++ b/MyAspNetApp/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-@model ChangePasswordViewModel.Models.UserRegisterModel;
+@model MyAspNetApp.Models.UserRegisterModel;
 <h2>Register</h2>
 
 @if (ViewBag.Message != null)
