--- a/MyAspNetApp/Views/Xe/index.cshtml
+++ b/MyAspNetApp/Views/Xe/index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<ChangePasswordViewModel.Models.Xe>
+@model IEnumerable<MyAspNetApp.Models.Xe>
 
 @{
     ViewData["Title"] = "Danh sách xe";
